feat: add the config section for integrate
